--- a/app/src/main/res/layout/holder_carousel_item.xml
+++ b/app/src/main/res/layout/holder_carousel_item.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.models.CarouselItem" />
@@ -18,6 +19,7 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/dimen_10"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
+        android:tag="@{model}"
         app:cardCornerRadius="@dimen/dimen_10">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,8 +29,8 @@
             <ImageView
                 android:id="@+id/carousel_img"
                 android:layout_width="match_parent"
-                android:contentDescription="@string/app_name"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
                 android:src="@color/unipi_blue" />
 
@@ -41,12 +43,12 @@
 
             <TextView
                 android:id="@+id/carousel_title"
+                style="@style/text_20_white_bold"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:padding="@dimen/dimen_10"
                 android:text="@{model.title}"
-                style="@style/text_20_white_bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
