--- a/app/src/main/res/layout/holder_dept_horizontal_nested_item.xml
+++ b/app/src/main/res/layout/holder_dept_horizontal_nested_item.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.ui.department.model.HorizontalDepartmentItem" />
@@ -15,7 +16,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:tag="@{model}">
 
         <TextView
             android:id="@+id/nested_title"
