--- a/app/src/main/res/layout/activity_eclass_announcements.xml
+++ b/app/src/main/res/layout/activity_eclass_announcements.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.stathis.unipiapp.ui.eclassAnnouncements.EclassAnnouncementsViewModel" />
@@ -11,14 +12,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/grey_bg">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
             android:id="@+id/eclass_announcements"
             style="@style/VerticalRecyclerView"
-            android:adapter="@{viewModel.adapter}"
-            android:layout_height="match_parent"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adapter="@{viewModel.adapter}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
