--- a/app/src/main/res/layout/holder_all_categories_item.xml
+++ b/app/src/main/res/layout/holder_all_categories_item.xml
@@ -4,30 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.models.ShortCategory" />
+
         <variable
             name="callback"
             type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
-    
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimen_5"
         android:background="@color/white"
-        android:onClick="@{(view) -> callback.onItemTap(view)}">
-        
+        android:onClick="@{(view) -> callback.onItemTap(view)}"
+        android:tag="@{model}">
+
         <TextView
             android:id="@+id/all_categories_title"
             android:layout_width="match_parent"
-            android:text="@{model.title}"
-            tools:text="@string/app_name"
+            android:layout_height="wrap_content"
             android:padding="@dimen/dimen_10"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="@{model.title}"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_height="wrap_content"/>
-        
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/app_name" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
