--- a/app/src/main/res/layout/holder_eclass_announcement_item.xml
+++ b/app/src/main/res/layout/holder_eclass_announcement_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.ui.eclassAnnouncements.model.EclassAnnouncement" />
@@ -13,54 +14,51 @@
             type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dimen_10"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
-        android:paddingStart="@dimen/dimen_10"
-        android:paddingTop="@dimen/dimen_10"
-        android:paddingEnd="@dimen/dimen_10">
+        android:tag="@{model}"
+        app:cardCornerRadius="@dimen/dimen_5">
 
-        <TextView
-            android:id="@+id/announcement_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{model.title}"
-            android:textColor="@color/unipi_blue"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/app_name" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/dimen_10">
 
-        <TextView
-            android:id="@+id/announcement_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/shimmer_grey"
-            android:paddingBottom="@dimen/dimen_10"
-            setDate="@{model.pubDate}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/announcement_title"
-            tools:text="@string/app_name" />
+            <TextView
+                android:id="@+id/announcement_title"
+                style="@style/text_14_blue_highlight"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{model.title}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/app_name" />
 
-        <TextView
-            android:id="@+id/announcement_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            setHtmlText="@{model.description}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/announcement_date"
-            tools:text="@string/app_name" />
+            <TextView
+                android:id="@+id/announcement_date"
+                setDate="@{model.pubDate}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/dimen_10"
+                android:paddingBottom="@dimen/dimen_10"
+                android:textColor="@color/grey_light"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/announcement_title"
+                tools:text="@string/app_name" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_10"
-            android:background="@color/unipi_red"
-            app:layout_constraintTop_toBottomOf="@id/announcement_desc" />
+            <TextView
+                android:id="@+id/announcement_desc"
+                setHtmlText="@{model.description}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/announcement_date"
+                tools:text="@string/app_name" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
