--- a/app/src/main/res/layout/holder_eclass_lesson_item.xml
+++ b/app/src/main/res/layout/holder_eclass_lesson_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.ui.dashboard.lessons.model.EclassLesson" />
@@ -16,10 +17,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{(view) -> callback.onItemTap(view)}"
         android:layout_marginStart="@dimen/dimen_10"
         android:layout_marginTop="@dimen/dimen_5"
-        android:layout_marginEnd="@dimen/dimen_10" >
+        android:layout_marginEnd="@dimen/dimen_10"
+        android:onClick="@{(view) -> callback.onItemTap(view)}"
+        android:tag="@{model}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -27,10 +29,10 @@
 
             <TextView
                 android:id="@+id/lesson_item_txt"
+                setLessonText="@{model.title}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/dimen_16"
-                setLessonText="@{model.title}"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toStartOf="@id/lesson_right_img"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +44,8 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="@dimen/dimen_5"
-                android:src="@drawable/arrow_right"
                 android:contentDescription="@string/app_name"
+                android:src="@drawable/arrow_right"
                 app:layout_constraintBottom_toBottomOf="@id/lesson_item_txt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/lesson_item_txt" />
