--- a/app/src/main/res/layout/holder_professor_item.xml
+++ b/app/src/main/res/layout/holder_professor_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.models.Professor" />
@@ -16,44 +17,45 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{(view) -> callback.onItemTap(view)}"
         android:padding="@dimen/dimen_10"
-        android:onClick="@{(view) -> callback.onItemTap(view)}">
+        android:tag="@{model}">
 
         <ImageView
             android:id="@+id/professor_img"
+            loadImageFromUrl="@{model.image}"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            loadImageFromUrl="@{model.image}"
+            android:contentDescription="@string/app_name"
             android:scaleType="centerCrop"
             android:src="@color/shimmer_grey"
-            android:contentDescription="@string/app_name"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/professor_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             android:paddingStart="@dimen/dimen_10"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/professor_img"
             android:text="@{model.fullName}"
             android:textColor="@color/unipi_blue"
-            tools:text="@string/app_name"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/professor_img"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/app_name" />
 
         <TextView
             android:id="@+id/professor_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
             android:paddingStart="@dimen/dimen_10"
             android:paddingBottom="@dimen/dimen_10"
-            app:layout_constraintTop_toBottomOf="@id/professor_date"
-            app:layout_constraintStart_toEndOf="@id/professor_img"
             android:text="@{model.title}"
             android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/professor_img"
+            app:layout_constraintTop_toBottomOf="@id/professor_date"
             tools:text="@string/app_name" />
 
         <View
@@ -61,10 +63,10 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_1"
             android:layout_marginTop="@dimen/dimen_5"
-            app:layout_goneMarginTop="@dimen/dimen_10"
             android:background="@color/unipi_red"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/professor_title"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_goneMarginTop="@dimen/dimen_10" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
