--- a/app/src/main/res/layout/holder_semester_item.xml
+++ b/app/src/main/res/layout/holder_semester_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="model"
             type="com.stathis.unipiapp.models.Semester" />
@@ -16,10 +17,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{(view) -> callback.onItemTap(view)}"
         android:layout_marginStart="@dimen/dimen_10"
         android:layout_marginTop="@dimen/dimen_5"
-        android:layout_marginEnd="@dimen/dimen_10" >
+        android:layout_marginEnd="@dimen/dimen_10"
+        android:onClick="@{(view) -> callback.onItemTap(view)}"
+        android:tag="@{model}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -30,8 +32,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:textColor="@color/black"
                 android:text="@{model.title}"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/app_name" />
@@ -40,8 +42,8 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="@dimen/dimen_5"
-                android:src="@drawable/arrow_right"
                 android:contentDescription="@string/app_name"
+                android:src="@drawable/arrow_right"
                 app:layout_constraintBottom_toBottomOf="@id/semester_item_txt"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/semester_item_txt" />
