--- a/app/src/main/res/layout/holder_viewpager_carousel_item.xml
+++ b/app/src/main/res/layout/holder_viewpager_carousel_item.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <data>
+
         <variable
             name="adapter"
             type="com.stathis.unipiapp.ui.department.adapter.CarouselAdapter" />
@@ -12,22 +13,22 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/carousel_viewpager"
+            adapter="@{adapter}"
+            setScrollableViewPager="@{adapter}"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:orientation="horizontal"
-            adapter="@{adapter}"
-            setScrollableViewPager="@{adapter}"
-            tools:listitem="@layout/holder_carousel_item"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/holder_carousel_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
