--- a/app/src/main/res/layout/main_screen_bottom_sheet.xml
+++ b/app/src/main/res/layout/main_screen_bottom_sheet.xml
@@ -6,7 +6,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_bg">
+        android:background="@color/grey_bg"
+        android:id="@+id/bottom_sheet_parent">
 
         <TextView
             android:id="@+id/bottom_sheet_title"
@@ -27,7 +28,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
             tools:itemCount="10"
             tools:listitem="holder_all_categories_item" />
