--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -6,8 +6,8 @@
         android:title="@string/menu_main" />
 
     <item android:id="@+id/nav_lessons"
-        android:icon="@drawable/ic_home"
-        android:title="@string/nav_my_lessons" />
+        android:icon="@drawable/ic_book"
+        android:title="@string/eclass" />
 
     <item android:id="@+id/nav_three"
         android:title="Item 3" />
