--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -53,4 +53,12 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="text_14_blue_highlight" parent="Widget.AppCompat.TextView">
+        <item name="android:background">@color/unipi_blue</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:padding">@dimen/dimen_10</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
