--- a/app/src/main/res/layout/holder_eclass_announcement_item.xml
+++ b/app/src/main/res/layout/holder_eclass_announcement_item.xml
@@ -17,10 +17,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_10"
+        style="@style/unipi_card"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
-        android:tag="@{model}"
-        app:cardCornerRadius="@dimen/dimen_5">
+        android:tag="@{model}">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
