--- a/app/src/main/res/layout/holder_home_item.xml
+++ b/app/src/main/res/layout/holder_home_item.xml
@@ -30,14 +30,12 @@
 
             <TextView
                 android:id="@+id/home_item_title"
+                style="@style/text_16_blue_bold"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/dimen_10"
                 android:paddingBottom="@dimen/dimen_10"
                 android:text="@{model.title}"
-                android:textColor="@color/unipi_blue"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/home_item_img"
                 app:layout_constraintTop_toBottomOf="@id/home_item_img"
@@ -48,7 +46,7 @@
                 setLocalImage="@{model.img}"
                 android:layout_width="@dimen/height_100"
                 android:layout_height="@dimen/height_70"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/dimen_16"
                 android:layout_marginStart="@dimen/dimen_5"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitCenter"
