--- a/app/src/main/res/layout/holder_lesson_item.xml
+++ b/app/src/main/res/layout/holder_lesson_item.xml
@@ -10,30 +10,28 @@
             type="com.stathis.unipiapp.models.Lesson" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_10"
+        style="@style/unipi_card"
         android:tag="@{model}">
 
-        <TextView
-            android:id="@+id/lesson_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{model.title}"
-            android:textColor="@color/unipi_blue"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/app_name" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/dimen_10">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_5"
-            android:background="@color/unipi_red"
-            app:layout_constraintTop_toBottomOf="@id/lesson_title" />
+            <TextView
+                android:id="@+id/lesson_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{model.title}"
+                android:textColor="@color/unipi_blue"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/app_name" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
