--- a/app/src/main/res/layout/holder_professor_item.xml
+++ b/app/src/main/res/layout/holder_professor_item.xml
@@ -14,59 +14,55 @@
             type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        style="@style/unipi_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
-        android:padding="@dimen/dimen_10"
         android:tag="@{model}">
 
-        <ImageView
-            android:id="@+id/professor_img"
-            loadImageFromUrl="@{model.image}"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="@string/app_name"
-            android:scaleType="centerCrop"
-            android:src="@color/shimmer_grey"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/professor_date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/dimen_10"
-            android:text="@{model.fullName}"
-            android:textColor="@color/unipi_blue"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/professor_img"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/app_name" />
-
-        <TextView
-            android:id="@+id/professor_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:paddingStart="@dimen/dimen_10"
-            android:paddingBottom="@dimen/dimen_10"
-            android:text="@{model.title}"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/professor_img"
-            app:layout_constraintTop_toBottomOf="@id/professor_date"
-            tools:text="@string/app_name" />
-
-        <View
-            android:id="@+id/professor_divider"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_5"
-            android:background="@color/unipi_red"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/professor_title"
-            app:layout_goneMarginTop="@dimen/dimen_10" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/dimen_10">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/professor_img"
+                loadImageFromUrl="@{model.image}"
+                android:layout_width="@dimen/image_50"
+                android:layout_height="@dimen/image_50"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"
+                android:src="@color/shimmer_grey"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/professor_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/dimen_10"
+                android:text="@{model.fullName}"
+                android:textColor="@color/unipi_blue"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/professor_img"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/app_name" />
+
+            <TextView
+                android:id="@+id/professor_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/dimen_10"
+                android:paddingBottom="@dimen/dimen_10"
+                android:text="@{model.title}"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/professor_img"
+                app:layout_constraintTop_toBottomOf="@id/professor_date"
+                tools:text="@string/app_name" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
