--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="image_80">80dp</dimen>
     <dimen name="dimen_20">20dp</dimen>
     <dimen name="image_150">150dp</dimen>
+    <dimen name="image_50">50dp</dimen>
+    <dimen name="image_35">35dp</dimen>
 </resources>
