--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,14 @@
     </style>
 
     <!-- Holder Styles -->
+    <style name="unipi_card" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">@dimen/dimen_5</item>
+        <item name="android:layout_marginTop">@dimen/dimen_10</item>
+        <item name="android:layout_marginStart">@dimen/dimen_10</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_10</item>
+    </style>
+
+
     <style name="holder_programmes_style">
         <item name="android:layout_marginTop">@dimen/dimen_5</item>
         <item name="android:layout_marginBottom">@dimen/dimen_5</item>
@@ -47,6 +55,12 @@
     <style name="text_18_black" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="text_16_blue_bold" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/unipi_blue</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="text_16_black" parent="Widget.AppCompat.TextView">
