--- a/app/src/main/res/layout/holder_contact_item.xml
+++ b/app/src/main/res/layout/holder_contact_item.xml
@@ -14,42 +14,39 @@
             type="com.stathis.unipiapp.callbacks.UnipiCallback" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        style="@style/unipi_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="@{(view) -> callback.onItemTap(view)}"
-        android:paddingStart="@dimen/dimen_10"
-        android:paddingTop="@dimen/dimen_10"
-        android:paddingEnd="@dimen/dimen_10"
         android:tag="@{model}">
 
-        <TextView
-            android:id="@+id/contact_item_title"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{model.title}"
-            android:textColor="@color/unipi_blue"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/app_name" />
+            android:layout_height="match_parent"
+            android:padding="@dimen/dimen_10">
 
-        <TextView
-            android:id="@+id/contact_item_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{model.address}"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/contact_item_title"
-            tools:text="@string/app_name" />
+            <TextView
+                android:id="@+id/contact_item_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{model.title}"
+                android:textColor="@color/unipi_blue"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="@string/app_name" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1"
-            android:layout_marginTop="@dimen/dimen_10"
-            android:background="@color/unipi_red"
-            app:layout_constraintTop_toBottomOf="@id/contact_item_address" />
+            <TextView
+                android:id="@+id/contact_item_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{model.address}"
+                android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/contact_item_title"
+                tools:text="@string/app_name" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
