--- a/app/src/main/res/layout/holder_carousel_item.xml
+++ b/app/src/main/res/layout/holder_carousel_item.xml
@@ -37,7 +37,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#80000000"
+                android:background="@color/unipi_blue_70_opacity"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
