--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,11 @@
 
     <color name="unipi_red">#A22631</color>
     <color name="unipi_blue">#222C54</color>
+    <color name="unipi_blue_70_opacity">#70222C54</color>
 
     <color name="grey_bg">#F0F0F0</color>
     <color name="shimmer_grey">#666666</color>
 
     <color name="grey_light">#888888</color>
+
 </resources>
