--- a/app/src/main/res/layout/activity_eclass_announcements.xml
+++ b/app/src/main/res/layout/activity_eclass_announcements.xml
@@ -12,6 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/eclass_announcements_parent"
         android:background="@color/grey_bg">
 
         <androidx.recyclerview.widget.RecyclerView
