Added male/female error photo

--- a/app/src/main/res/layout/holder_professor_item.xml
+++ b/app/src/main/res/layout/holder_professor_item.xml
@@ -28,7 +28,7 @@
 
             <ImageView
                 android:id="@+id/professor_img"
-                loadImageFromUrl="@{model.image}"
+                loadProfessorImage="@{model}"
                 android:layout_width="@dimen/image_50"
                 android:layout_height="@dimen/image_50"
                 android:contentDescription="@string/app_name"
