--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
             android:layout_height="@dimen/image_150"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
+            android:src="@mipmap/unipi_launcher_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@mipmap/unipi_launcher_icon" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/unipi_title"
@@ -26,10 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:text="@string/unipi_main_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/unipi_logo"
-            tools:text="@string/app_name" />
+            app:layout_constraintTop_toBottomOf="@id/unipi_logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
