--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,9 +18,10 @@
         <View
             android:id="@+id/top_header"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_100"
+            android:layout_height="0dp"
             android:background="@drawable/round_corners_bottom"
             android:backgroundTint="@color/unipi_blue"
+            app:layout_constraintBottom_toBottomOf="@id/unipi_logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,7 +29,7 @@
             android:id="@+id/unipi_logo"
             android:layout_width="@dimen/image_80"
             android:layout_height="@dimen/image_80"
-            android:layout_marginStart="@dimen/dimen_10"
+            android:layout_margin="@dimen/dimen_10"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_unipi_logo_svg"
@@ -41,10 +42,9 @@
             style="@style/text_18_white"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/dimen_10"
-            android:paddingTop="@dimen/dimen_10"
             android:text="@string/main_screen_title"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/unipi_logo"
             app:layout_constraintStart_toEndOf="@id/unipi_logo"
             app:layout_constraintTop_toTopOf="@id/unipi_logo" />
 
