--- a/app/src/main/res/layout/main_screen_bottom_sheet.xml
+++ b/app/src/main/res/layout/main_screen_bottom_sheet.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="adapter"
+            type="com.stathis.unipiapp.ui.dashboard.main.bottomsheet.adapter.ShortCategoriesAdapter" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:adapter="@{adapter}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/bottom_sheet_title"
             tools:itemCount="10"
