--- a/app/src/main/res/layout/holder_professor_item.xml
+++ b/app/src/main/res/layout/holder_professor_item.xml
@@ -33,7 +33,7 @@
                 android:layout_height="@dimen/image_50"
                 android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
-                android:src="@color/shimmer_grey"
+                android:src="@drawable/ic_unipi_logo_svg"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
