--- a/app/src/main/res/layout/holder_eclass_announcement_item.xml
+++ b/app/src/main/res/layout/holder_eclass_announcement_item.xml
@@ -38,7 +38,7 @@
 
             <TextView
                 android:id="@+id/announcement_date"
-                setDate="@{model.pubDate}"
+                setDefaultDate="@{model.pubDate}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/dimen_10"
