--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,6 +30,12 @@
         <item name="android:layout_marginEnd">@dimen/dimen_10</item>
     </style>
 
+    <style name="unipi_lesson_card" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">@dimen/dimen_5</item>
+        <item name="android:layout_marginBottom">@dimen/dimen_10</item>
+        <item name="android:layout_marginStart">@dimen/dimen_10</item>
+        <item name="android:layout_marginEnd">@dimen/dimen_10</item>
+    </style>
 
     <style name="holder_programmes_style">
         <item name="android:layout_marginTop">@dimen/dimen_5</item>
