--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="image_150">150dp</dimen>
     <dimen name="image_50">50dp</dimen>
     <dimen name="image_35">35dp</dimen>
+    <dimen name="image_60">60dp</dimen>
+    <dimen name="text_16">16sp</dimen>
 </resources>
