--- a/app/src/main/res/drawable/round_corners_bottom.xml
+++ b/app/src/main/res/drawable/round_corners_bottom.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white"/>
     <corners android:topLeftRadius="0dp" android:topRightRadius="0dp"
-        android:bottomLeftRadius="20dp" android:bottomRightRadius="20dp"/>
+        android:bottomLeftRadius="@dimen/dimen_20" android:bottomRightRadius="@dimen/dimen_20"/>
 </shape>
