--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -20,7 +20,7 @@
 
     <item
         android:id="@+id/contact"
-        android:title="@string/contact" />
+        android:title="@string/secretariat" />
 
     <item android:title="@string/the_app">
         <menu>
