--- a/app/src/main/res/layout/activity_get_in_touch.xml
+++ b/app/src/main/res/layout/activity_get_in_touch.xml
@@ -3,13 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-        <variable
-            name="disclamer"
-            type="String" />
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,10 +14,18 @@
             android:layout_height="wrap_content"
             android:justificationMode="inter_word"
             android:padding="@dimen/dimen_16"
-            android:text="@{disclamer}"
+            android:text="@string/disclamer"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/lorem_ipsum_2" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/disclamer_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dimen_16"
+            android:text="@string/disclamer_more_info"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/disclamer_text" />
 
         <TextView
             android:id="@+id/news_publisher_name"
@@ -34,7 +35,7 @@
             android:paddingStart="@dimen/dimen_16"
             android:paddingTop="@dimen/dimen_16"
             android:text="@string/news_publisher_header"
-            app:layout_constraintTop_toBottomOf="@id/disclamer_text" />
+            app:layout_constraintTop_toBottomOf="@id/disclamer_info" />
 
         <TextView
             android:id="@+id/news_publisher_desc"
